--- a/themes/beyond-the-physical-custom-theme/config/theme.ini
+++ b/themes/beyond-the-physical-custom-theme/config/theme.ini
@@ -21,4 +21,4 @@ elements.footer.attributes.id = "footer"
 elements.footer.type = "Omeka\Form\Element\HtmlTextarea"
 elements.footer.options.label = "Footer Content"
 elements.footer.options.info = "HTML content to appear in the footer"
-elements.footer.attributes.value = "Powered by Omeka S"
+elements.footer.attributes.value = "Edit footer in theme settings"
