Rename theme folder and update theme config to final name of project

--- a/themes/museumcollab-custom-theme/config/theme.ini
+++ b/themes/museumcollab-custom-theme/config/theme.ini
@@ -1,6 +1,6 @@
 [info]
-name = "Beyond the Physical Custom Theme"
-version = "0.0.0"
+name = "Museumcollab Custom Theme"
+version = "0.0.1"
 author = "LSA TS Research Software Programming"
 ;description = ""
 ;theme_link = ""
